# sermonrecorder

./: .gitignore  CONTEXT.md  StartPewcorderDev.applescript  skills-lock.json
backend/: .env.example  README.md  pyproject.toml
backend/accounts/: admin.py  models.py  serializers.py  social_auth.py  test_social_auth.py  tests.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_savedrecipient.py  0003_deviceregistration.py  0004_externalidentity.py
backend/config/: celery.py  settings.py  urls.py
backend/sermons/: admin.py  audio_chunks.py  church_suggestions.py  context_views.py  editing_views.py  emailing.py  models.py  openai_transcriber.py  pagination.py  private_audio.py  processed_sermon_repository.py  processing.py  processing_messages.py  provider_processor.py  push_alerts.py  scripture.py  serializers.py  share_urls.py  sharing.py  simpleai_artifacts.py  tagging.py  tasks.py  test_church_suggestions.py  test_context.py  test_editing.py  test_emailing.py  test_private_audio.py  test_processed_sermon_repository.py  test_processing.py  test_processing_messages.py  test_provider_pipeline.py  test_push_alerts.py  test_push_gateways.py  test_search.py  test_sharing.py  tests.py  urls.py  views.py
backend/sermons/migrations/: 0001_initial.py  0002_sermon_processing_attempts_and_more.py  0003_transcript_scripturereference_relatedsermon_and_more.py  0004_reflection.py  0005_sharelink.py  0006_sermon_liturgical_day_sermon_occasion_kind_church_and_more.py  0007_processingalert.py  0008_processingalert_next_attempt_at_and_more.py  0009_alter_studyartifact_kind.py  (+2 more)
(+89 files in other folders)
