[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.22",
]
