[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.3",
    "django>=5.2,<5.3",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "haesimpleai",
    "openai>=2.46.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.22",
]

[tool.uv.sources]
haesimpleai = { git = "https://github.com/HireAnEsquire/simpleai.git", rev = "97c85b05e38e23180b15ea85bfa4ce8798427de4" }
